examples/kubernetes/aws/oxtrust/static-ebs/oxtrust.yaml

apiVersion: v1
kind: Service
metadata:
  name: oxtrust
  labels:
    app: oxtrust
spec:
  ports:
  - port: 8080
    name: oxtrust
  selector:
    app: oxtrust
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oxtrust
  labels:
    app: oxtrust
    APP_NAME: oxtrust
spec:
  serviceName: oxtrust
  replicas: 1
  selector:
    matchLabels:
      app: oxtrust
  template:
    metadata:
      labels:
        app: oxtrust
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: failure-domain.beta.kubernetes.io/zone
                operator: In
                values:
                # change this to same zone your volume was created at
                - us-west-2a
      containers:
      - name: oxtrust
        imagePullPolicy: Always
        image: gluufederation/oxtrust:3.1.6_05
        command:
          - /bin/sh
          - -c
          - |
              /usr/bin/python /scripts/update-clb-ip.py &
              /opt/scripts/entrypoint.sh
        resources:
          requests:
            memory: "1000Mi"
          limits:
            memory: "1536Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
          # name must match the volume name below
          - name: shared-shib
            mountPath: "/opt/shared-shibboleth-idp"
            subPath: shared-shibboleth-idp
          - mountPath: /opt/gluu/jetty/identity/logs
            name: oxtrust-volume
            subPath: logs
          - mountPath: /opt/gluu/jetty/identity/lib/ext
            name: oxtrust-volume
            subPath: ext
          - mountPath: /opt/gluu/jetty/identity/custom/static
            name: oxtrust-volume
            subPath: static
          - mountPath: /opt/gluu/jetty/identity/custom/pages
            name: oxtrust-volume
            subPath: pages
          - mountPath: /scripts
            name: update-clb-ip

        livenessProbe:
          httpGet:
            path: /identity/restv1/scim-configuration
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /identity/restv1/scim-configuration
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 25
      hostAliases:
      - ip: NGINX_IP
        hostnames:
        - demoexample.gluu.org
      volumes:
      - name: shared-shib
        persistentVolumeClaim:
          claimName: shared-shib-volume-claim
      - name: oxtrust-volume
        persistentVolumeClaim:
          claimName: oxtrust-volume-claim
      - name: update-clb-ip
        configMap:
          name: updateclbip
